tests/derive_errors/struct/tuple_with_wrong_number_of_fields.stderr
error: jtd-derive only supports tuple structs if they have exactly one field
 --> tests/derive_errors/struct/tuple_with_wrong_number_of_fields.rs:2:8
  |
2 | struct Tuple(u32, String);
  |        ^^^^^
